WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23803
fix 'off-by-1' error in Chromium font fallback
https://bugs.webkit.org/show_bug.cgi?id=23803
Summary
fix 'off-by-1' error in Chromium font fallback
Jungshik Shin
Reported
2009-02-06 15:38:58 PST
There's an 'off-by-1' error in platform/graphics/chromium/FontCacheChromium.cpp. As a result, when only the last font in the list of fallback fonts covers a character, the character is regarded as not covered by any font and is rendered as an empty box.
Attachments
a test case
(271 bytes, text/html)
2009-02-06 15:39 PST
,
Jungshik Shin
no flags
Details
1-liner patch (with a comment)
(1.56 KB, patch)
2009-02-06 15:56 PST
,
Jungshik Shin
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jungshik Shin
Comment 1
2009-02-06 15:39:49 PST
Created
attachment 27426
[details]
a test case With code2000 font installed, all 3 lines should be rendered identically.
Jungshik Shin
Comment 2
2009-02-06 15:56:06 PST
Created
attachment 27429
[details]
1-liner patch (with a comment)
Eric Seidel (no email)
Comment 3
2009-02-24 16:05:27 PST
Comment on
attachment 27429
[details]
1-liner patch (with a comment) OK. In the future, you don't need to make me the requestee. WebKit doesn't tend to target reviews to specific people unless you know that they are the only person who could review your change. In this case, I'm not the only person who could review this change. Making me the requestee is likely to just slow down the process.
Dimitri Glazkov (Google)
Comment 4
2009-03-03 10:22:30 PST
Landed as
http://trac.webkit.org/changeset/41392
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug