2009-03-03  Jungshik Shin <jshin@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=23803
        Fix an 'off-by-1' error in ChromiumWin's font fallback.

        * platform/graphics/chromium/FontCacheChromiumWin.cpp:
        (WebCore::FontCache::getFontDataForCharacters):

Canonical link: https://commits.webkit.org/33462@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41392 268f45cc-cd09-0410-ab3c-d52691b4dbfc